Enable contained Aniyomi APK execution